objects/ssot__EmployeeDevelopmentSummary__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AverageTrainingTimeNumber__c</fullName>
        <label>Average Training Time</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DisclsReportingPeriod__c</fullName>
        <label>Disclsoure Reporting Period Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmployeeCount__c</fullName>
        <label>Employee Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__EmployeePercentage__c</fullName>
        <label>Employee Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ssot__EmployeeType__c</fullName>
        <label>Employee Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Gender__c</fullName>
        <label>Gender</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Employee Development Summary Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProgramCategory__c</fullName>
        <label>Program Category</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubsidiaryAccountId__c</fullName>
        <label>Subsidiary Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747382302826_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EmployeeDevelopmentSummary_DisclsRep_rel</label>
        <referenceTo>ssot__DisclosureReportingPeriod__dlm</referenceTo>
        <relationshipLabel>EmployeeDevelopmentSummary_DisclsRep_rel</relationshipLabel>
        <relationshipName>rel_1747382302826_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383542535_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EmployeeDevelopmentSummary_Subsidiar_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>EmployeeDevelopmentSummary_Subsidiar_rel</relationshipLabel>
        <relationshipName>rel_1747383542535_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>